# narratives

./: README.md  cloud-native-eo.md  example.md  lava-flow.md  narratives.json  ndci.md  ndvi  ndvi.md  pyproject.toml
.github/: extract_metadata.py
.github/prompts/: plan-lavaFlow.prompt.md  plan-ndviStoryUpdate.prompt.md
.github/workflows/: publish_metada.yml  publish_preview.yml
chl-ndci/: ndci.md  openeo_ndci_cyanobacteria.ipynb
pr-preview/pr-1/: narratives.json
pr-preview/pr-11/: narratives.json
pr-preview/pr-13/: narratives.json
pr-preview/pr-14/: narratives.json
pr-preview/pr-15/: narratives.json  ndci.md
pr-preview/pr-18/: narratives.json
pr-preview/pr-19/: README.md  narratives.json
pr-preview/pr-20/: README.md  narratives.json
pr-preview/pr-21/: README.md  narratives.json
pr-preview/pr-4/: cloud-native-eo.md  narratives.json  ndvi.md
pr-preview/pr-5/: lava-flow.md  narratives.json  ndvi.md
pr-preview/pr-6/: narratives.json
pr-preview/pr-7/: narratives.json
pr-preview/pr-8/: narratives.json
pr-preview/pr-9/: lava-flow.md  narratives.json  ndci.md  ndvi.md
