[project]
name = "eopf.explorer.narratives"
version = "0.1.0"
description = "EOPF Explorer narratives"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Emmanuel Mathot", email = "emmanuel@developmentseed.org"},
]
keywords = [
    "TiTiler",
    "EOPF",
    "Explorer",
    "Sentinel-2",
    "Copernicus",
    "openEO",
    "ESA",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "openeo>=0.24.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "requests>=2.28.0",
]
    
[project.urls]
Homepage = 'https://github.com/EOPF-Explorer/narratives'
Documentation = "https://github.com/EOPF-Explorer/narratives"
Issues = "https://github.com/EOPF-Explorer/narratives/issues"
Source = "https://github.com/EOPF-Explorer/narratives"
Changelog = "https://github.com/EOPF-Explorer/narratives/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]